deploy: 202861c0a19a6beca0ae7442bf0ef77596945cec

--- a/pricing.html
+++ b/pricing.html
@@ -41,7 +41,8 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
   
-  <script src="https://app.sandbox.midtrans.com/snap/snap.js" data-client-key="SB-Mid-client-i2KW02MfN9duiyJ9"></script>
+  <script src="https://app.sandbox.midtrans.com/snap/snap.js" data-client-key=""></script>
+  <script src="https://www.paypal.com/sdk/js?client-id=ATCHMUUU140DUFJVh2BhJ3MwEl-2YpsO1GcLx9jVt-nbLMyuLw0QIb5BxeV09py5QPG4rJ95HkX6fp7s&currency=USD"></script>
 <!-- Firebase SDKs from CDN -->
 <script src="https://www.gstatic.com/firebasejs/10.12.1/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.12.1/firebase-auth-compat.js"></script>
@@ -169,9 +170,8 @@ if (!lastSeen || now - lastSeen > 24 * 60 * 60 * 1000) {
   <div class="flex lg:justify-between md:justify-self-start gap-2 items-center w-full md:block">
     <h1 class="text-2xl mb-3 font-bold hidden md:block">L Y Я A</h1>
     <div class="bg-[#2A2A2A] glass text-sm rounded px-2 py-1 md:w-fit">v.2.5</div>
-    <a href="/daffadevhosting/pricing" class="text-sm bg-pink-700 md:hidden block text-white px-3 py-1 rounded">Upgrade PRO</a>
-  </div>
   
+  </div>
       <!-- Tombol Chat -->
       <button id="chat-toggle" class="cursor-pointer text-sm text-center text-gray-400 hover:text-blue-400 transition underline">
         <i class="fa-solid fa-comments text-2xl"></i>
@@ -183,9 +183,7 @@ if (!lastSeen || now - lastSeen > 24 * 60 * 60 * 1000) {
     <i class="fa-brands fa-git-alt text-3xl"></i>
   </a>
   <!-- Toggle Output Panel (Mobile only) -->
-  <button onclick="toggleOutputPanel()" class="md:hidden cursor-pointer text-sm text-center text-gray-400 hover:text-blue-400 transition underline">
-    <i class="fa-solid fa-code text-2xl"></i>
-  </button>
+  
 </aside>
 <div id="model-selector"
   class="fixed z-50 bottom-20 md:left-24 left-4 right-4 md:right-auto w-auto max-w-xs bg-[#1E1E1E] backdrop-blur-md rounded-xl shadow-xl border border-gray-700 p-4 space-y-4 opacity-0 scale-95 pointer-events-none">
@@ -275,6 +273,7 @@ if (!lastSeen || now - lastSeen > 24 * 60 * 60 * 1000) {
   </div>
 </div>
 <script>
+  const API_URL = "https://ui-transform.daffadev.workers.dev/generate";
 firebase.auth().onAuthStateChanged(async (user) => {
   const btn = document.getElementById("userButton");
 
@@ -325,12 +324,10 @@ function renderUserProfile(user, quota) {
 
 }
 </script>
-          <div class="relative p-4 overflow-y-auto mx-auto h-screen max-w-[1200px] w-full">
-        <!-- Pricing Cards -->
-    <div class="grid grid-cols-1 mx-auto mt-16 md:grid-cols-2 lg:grid-cols-3 gap-8">
+          <div class="relative p-4 overflow-y-auto mx-auto h-screen max-w-[1200px] w-full scrollbar-hidden">
+        <div class="grid grid-cols-1 mx-auto md:mt-14 mt-2 md:grid-cols-2 lg:grid-cols-3 gap-8">
 
-    <!-- Medium Card -->
-    <div class="bg-white glassmorph rounded-xl overflow-hidden shadow-lg card-hover">
+    <div class="glassmorph rounded-xl overflow-hidden shadow-lg card-hover">
         <div class="glass px-6 py-5 bg-blue-100 border-b border-blue-200">
         <div class="flex items-center">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-blue-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -347,16 +344,25 @@ function renderUserProfile(user, quota) {
             <li class="flex items-start"><i class="fa-solid fa-check text-green-500 mt-1 mr-2"></i>Model: LLaMA 3B</li>
             <li class="flex items-start"><i class="fa-solid fa-check text-green-500 mt-1 mr-2"></i>Tanpa iklan</li>
         </ul>
+
         <button
-            class="mt-8 w-full bg-blue-600 hover:bg-blue-700 text-white font-semibold py-3 px-4 rounded-lg transition duration-300 ease-in-out transform hover:-translate-y-1 pay-button"
+            class="pay-midtrans-button mt-8 w-full bg-blue-600 hover:bg-blue-700 text-white font-semibold py-3 px-4 rounded-lg transition duration-300 ease-in-out transform hover:-translate-y-1 pay-button"
             data-amount="24000"
             data-plan="medium"
-        >Pilih Paket</button>
+            style="display: none;"
+        >
+        Bayar dengan Midtrans</button>
+        <div
+            id="paypal-buttons-medium"
+            data-plan="medium"
+            data-amount="24000"
+            class="paypal-buttons-container w-full mt-2"
+            style="display: none;" ></div>
+        <p class="login-message text-center text-red-500 text-sm mt-2 hidden">Harap login untuk membayar.</p>
         </div>
     </div>
 
-    <!-- Advanced Card (Popular) -->
-    <div class="relative bg-white glassmorph rounded-xl overflow-hidden shadow-lg card-hover transform scale-105 z-10 border-2 border-yellow-400 animate__animated animate__pulse">
+    <div class="relative glassmorph rounded-xl overflow-hidden shadow-lg card-hover transform scale-105 z-10 border-2 border-yellow-400 animate__animated animate__pulse">
         <div class="absolute top-0 right-0 bg-yellow-300 text-yellow-900 px-3 py-1 text-xs font-bold rounded-bl-lg popular-badge">
         TERPOPULER
         </div>
@@ -377,15 +383,22 @@ function renderUserProfile(user, quota) {
             <li class="flex items-start"><i class="fa-solid fa-check text-green-500 mt-1 mr-2"></i>Tanpa batasan fitur</li>
         </ul>
         <button
-            class="mt-8 w-full bg-yellow-500 hover:bg-yellow-600 text-white font-semibold py-3 px-4 rounded-lg transition duration-300 ease-in-out transform hover:-translate-y-1 pay-button"
+            class="pay-midtrans-button mt-8 w-full bg-yellow-500 hover:bg-yellow-600 text-white font-semibold py-3 px-4 rounded-lg transition duration-300 ease-in-out transform hover:-translate-y-1 pay-button"
             data-amount="38000"
             data-plan="advanced"
-        >Pilih Paket</button>
+        >
+        Bayar dengan Midtrans</button>
+        <div
+            id="paypal-buttons-advanced"
+            data-plan="advanced"
+            data-amount="38000"
+            class="paypal-buttons-container w-full mt-2"
+            style="display: none;" ></div>
+        <p class="login-message text-center text-red-500 text-sm mt-2 hidden">Harap login untuk membayar.</p>
         </div>
     </div>
 
-    <!-- Expert Card -->
-    <div class="bg-white glassmorph rounded-xl overflow-hidden shadow-lg card-hover">
+    <div class="glassmorph rounded-xl overflow-hidden shadow-lg card-hover">
         <div class="glass px-6 py-5 bg-green-100 border-b border-green-200">
         <div class="flex items-center">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-green-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -403,15 +416,218 @@ function renderUserProfile(user, quota) {
             <li class="flex items-start"><i class="fa-solid fa-check text-green-500 mt-1 mr-2"></i>Powerful reasoning & output</li>
         </ul>
         <button
-            class="mt-8 w-full bg-green-600 hover:bg-green-700 text-white font-semibold py-3 px-4 rounded-lg transition duration-300 ease-in-out transform hover:-translate-y-1 pay-button"
+            class="pay-midtrans-button mt-8 w-full bg-green-600 hover:bg-green-700 text-white font-semibold py-3 px-4 rounded-lg transition duration-300 ease-in-out transform hover:-translate-y-1 pay-button"
             data-amount="69000"
             data-plan="expert"
-        >Pilih Paket</button>
+        >
+        Bayar dengan Midtrans</button>
+        <div
+            id="paypal-buttons-expert"
+            data-plan="expert"
+            data-amount="69000"
+            class="paypal-buttons-container w-full mt-2"
+            style="display: none;" ></div>
+        <span class="login-message text-center text-red-500 text-sm mt-2 hidden">Harap login untuk membayar.</span>
         </div>
+    </div>
     </div>
 
     </div>
 </div>
+
+<script>
+const BACKEND_BASE_URL = 'https://ui-transform.daffadev.workers.dev'; // <-- Ganti dengan URL Cloudflare Worker Kamu!
+let currentUser = null;
+
+firebase.auth().onAuthStateChanged(user => {
+    currentUser = user;
+
+    // Sembunyikan semua tombol pembayaran (Midtrans & PayPal containers) secara default
+    const midtransButtons = document.querySelectorAll('.pay-midtrans-button');
+    const paypalContainers = document.querySelectorAll('.paypal-buttons-container');
+    const loginMessages = document.querySelectorAll('.login-message');
+
+    if (user) {
+        // Pengguna sudah login
+        loginMessages.forEach(message => {
+            message.style.display = 'none'; // Sembunyikan pesan login
+        });
+
+        midtransButtons.forEach(button => {
+            button.style.display = 'block'; // Tampilkan tombol Midtrans
+        });
+
+        paypalContainers.forEach(container => {
+            container.style.display = 'block'; // Tampilkan container PayPal
+            // Sekarang kita akan merender tombol PayPal di sini
+            const plan = container.dataset.plan;
+            const amountIDR = parseInt(container.dataset.amount);
+            let amountUSD = (amountIDR / 15000).toFixed(2); // Sesuaikan konversi dollar
+
+            // Render tombol PayPal untuk setiap container
+            renderPayPalButton(plan, amountUSD, container.id);
+        });
+
+    } else {
+        // Pengguna belum login
+        loginMessages.forEach(message => {
+            message.style.display = 'block'; // Tampilkan pesan login
+        });
+
+        midtransButtons.forEach(button => {
+            button.style.display = 'none'; // Sembunyikan tombol Midtrans
+        });
+
+        paypalContainers.forEach(container => {
+            container.style.display = 'none'; // Sembunyikan container PayPal
+            container.innerHTML = ''; // Hapus tombol PayPal yang mungkin sudah dirender
+        });
+    }
+});
+
+// Fungsi untuk me-render tombol PayPal
+// Ini membantu menghindari rendering ulang yang tidak perlu
+function renderPayPalButton(plan, amountUSD, containerId) {
+    // Pastikan container bersih sebelum merender
+    const container = document.getElementById(containerId);
+    if (!container) return;
+    container.innerHTML = '';
+
+    paypal.Buttons({
+        style: {
+            layout: 'vertical',
+            color: 'gold',
+            shape: 'rect',
+            label: 'paypal'
+        },
+        createOrder: async function(data, actions) {
+            if (!currentUser) { // Fallback check
+                alert('Harap login ke akun Anda terlebih dahulu untuk melanjutkan pembayaran.');
+                return actions.reject('User not logged in');
+            }
+            const idToken = await currentUser.getIdToken();
+            try {
+                const res = await fetch(`${BACKEND_BASE_URL}/api/paypal/create-order`, {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json',
+                        'Authorization': `Bearer ${idToken}`
+                    },
+                    body: JSON.stringify({
+                        amount: amountUSD,
+                        currency_code: 'USD',
+                        description: `Pembelian Paket ${plan}`
+                    })
+                });
+                const order = await res.json();
+                if (order.id) {
+                    return order.id;
+                } else {
+                    console.error('Failed to create PayPal order (no ID):', order.details || order.error || order);
+                    alert('Terjadi kesalahan saat membuat pesanan PayPal. Silakan coba lagi.');
+                    throw new Error('No order ID from backend.');
+                }
+            } catch (error) {
+                console.error('Error creating PayPal order:', error);
+                alert('Terjadi kesalahan jaringan saat membuat pesanan PayPal.');
+                throw error;
+            }
+        },
+        onApprove: async function(data, actions) {
+            if (!currentUser) { // Fallback check
+                alert('Harap login ke akun Anda terlebih dahulu untuk melanjutkan pembayaran.');
+                return actions.reject('User not logged in');
+            }
+            const idToken = await currentUser.getIdToken();
+            try {
+                const res = await fetch(`${BACKEND_BASE_URL}/api/paypal/capture-order`, {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json',
+                        'Authorization': `Bearer ${idToken}`
+                    },
+                    body: JSON.stringify({ orderID: data.orderID })
+                });
+
+                const transaction = await res.json();
+                if (transaction.status === 'COMPLETED') {
+                    alert('Pembayaran berhasil!');
+                    window.location.href = '/thanks';
+                } else {
+                    alert('Pembayaran tidak selesai. Status: ' + transaction.status);
+                    window.location.href = '/error-page';
+                }
+            } catch (error) {
+                console.error('Error capturing PayPal payment:', error);
+                alert('Terjadi kesalahan saat menyelesaikan pembayaran PayPal.');
+                window.location.href = '/error-page';
+            } finally {
+                // Setelah selesai, refresh status tombol atau halaman
+            }
+        },
+        onCancel: function(data) {
+            console.log('Payment cancelled by user:', data);
+            alert('Pembayaran PayPal dibatalkan.');
+        },
+        onError: function(err) {
+            console.error('An error occurred with PayPal:', err);
+            alert('Terjadi kesalahan dengan PayPal. Silakan coba lagi.');
+        }
+    }).render(`#${containerId}`); // Render ke div spesifik
+}
+
+
+// Event listener untuk tombol Midtrans (menggunakan class baru .pay-midtrans-button)
+document.querySelectorAll('.pay-midtrans-button').forEach((btn) => {
+  btn.addEventListener('click', async () => {
+    if (!currentUser) {
+        alert('Harap login ke akun Anda terlebih dahulu untuk melanjutkan pembayaran.');
+        return;
+    }
+
+    const plan = btn.dataset.plan;
+    const amountIDR = parseInt(btn.dataset.amount);
+
+    btn.disabled = true;
+    btn.textContent = 'Memproses...';
+
+    const idToken = await currentUser.getIdToken();
+
+    try {
+        const res = await fetch(`${BACKEND_BASE_URL}/api/midtrans/create-midtrans`, {
+          method: 'POST',
+          headers: {
+            'Content-Type': 'application/json',
+            'Authorization': `Bearer ${idToken}` // Mengirim ID Token
+          },
+          body: JSON.stringify({ plan, amount: amountIDR })
+        });
+
+        const { token } = await res.json();
+
+        if (token) {
+          snap.pay(token, {
+            onSuccess: result => window.location.href = '/thanks',
+            onPending: result => window.location.href = '/thanks',
+            onError: err => {
+              alert('Gagal memproses pembayaran Midtrans.');
+              console.error(err);
+            }
+          });
+        } else {
+            alert('Gagal mendapatkan token Midtrans.');
+        }
+    } catch (err) {
+        alert('Terjadi kesalahan saat memproses Midtrans.');
+        console.error(err);
+    } finally {
+        btn.disabled = false;
+        btn.textContent = 'Bayar dengan Midtrans'; // Reset teks
+    }
+  });
+});
+
+</script>
               <footer class="text-sm text-center text-gray-500 py-6  border-t border-gray-700">
         &copy; 2025 UI Generator by <a href="https://daffadevhosting.github.io" target="_blank" class="font-bold text-blue-400">L Y Я A</a>. All rights reserved.
       </footer>
