--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
   
-  <script src="https://app.sandbox.midtrans.com/snap/snap.js" data-client-key="SB-Mid-client-i2KW02MfN9duiyJ9"></script>
+  <script src="https://app.sandbox.midtrans.com/snap/snap.js" data-client-key=""></script>
+  <script src="https://www.paypal.com/sdk/js?client-id=ATCHMUUU140DUFJVh2BhJ3MwEl-2YpsO1GcLx9jVt-nbLMyuLw0QIb5BxeV09py5QPG4rJ95HkX6fp7s&currency=USD"></script>
 <!-- Firebase SDKs from CDN -->
 <script src="https://www.gstatic.com/firebasejs/10.12.1/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.12.1/firebase-auth-compat.js"></script>
@@ -169,9 +170,10 @@ if (!lastSeen || now - lastSeen > 24 * 60 * 60 * 1000) {
   <div class="flex lg:justify-between md:justify-self-start gap-2 items-center w-full md:block">
     <h1 class="text-2xl mb-3 font-bold hidden md:block">L Y Я A</h1>
     <div class="bg-[#2A2A2A] glass text-sm rounded px-2 py-1 md:w-fit">v.2.5</div>
-    <a href="/daffadevhosting/pricing" class="text-sm bg-pink-700 md:hidden block text-white px-3 py-1 rounded">Upgrade PRO</a>
-  </div>
   
+    <a href="/daffadevhosting/pricing" class="text-sm bg-pink-700 md:hidden block text-white px-3 py-1 rounded">Upgrade PRO</a>
+  
+  </div>
       <!-- Tombol Chat -->
       <button id="chat-toggle" class="cursor-pointer text-sm text-center text-gray-400 hover:text-blue-400 transition underline">
         <i class="fa-solid fa-comments text-2xl"></i>
@@ -183,9 +185,11 @@ if (!lastSeen || now - lastSeen > 24 * 60 * 60 * 1000) {
     <i class="fa-brands fa-git-alt text-3xl"></i>
   </a>
   <!-- Toggle Output Panel (Mobile only) -->
+  
   <button onclick="toggleOutputPanel()" class="md:hidden cursor-pointer text-sm text-center text-gray-400 hover:text-blue-400 transition underline">
     <i class="fa-solid fa-code text-2xl"></i>
   </button>
+  
 </aside>
 <div id="model-selector"
   class="fixed z-50 bottom-20 md:left-24 left-4 right-4 md:right-auto w-auto max-w-xs bg-[#1E1E1E] backdrop-blur-md rounded-xl shadow-xl border border-gray-700 p-4 space-y-4 opacity-0 scale-95 pointer-events-none">
@@ -291,6 +295,7 @@ if (!lastSeen || now - lastSeen > 24 * 60 * 60 * 1000) {
   </div>
 </div>
 <script>
+  const API_URL = "https://ui-transform.daffadev.workers.dev/generate";
 firebase.auth().onAuthStateChanged(async (user) => {
   const btn = document.getElementById("userButton");
 
@@ -393,7 +398,7 @@ function renderUserProfile(user, quota) {
   // =================================================================
   // KONFIGURASI & VARIABEL GLOBAL
   // =================================================================
-  const API_URL = "https://ui-transform.daffadev.workers.dev/generate";
+  
   const greetingHTML = `<!doctype html>
 <html lang="id-ID">
   <head>
@@ -671,7 +676,7 @@ async function handleTransformClick() {
     <!-- Textarea (edit mode) -->
     <textarea
       id="output-editable"
-      class="hidden h-full w-full bg-[#1e1e1e] text-green-300 font-mono text-sm p-4 pt-28 border border-gray-700 resize-vertical focus:outline-none focus:ring-2 focus:ring-blue-500"
+      class="hidden h-full w-full bg-[#1e1e1e] text-green-300 font-mono text-sm p-4 md:pt-4 pt-28 border border-gray-700 resize-vertical focus:outline-none focus:ring-2 focus:ring-blue-500"
       rows="16"
       spellcheck="false"
     ></textarea>
