--- a/pricing.html
+++ b/pricing.html
@@ -16,12 +16,12 @@
   <meta property="og:description" content="Konversi desain UI ke kode Tailwind CSS secara otomatis dengan AI. Solusi cepat untuk developer dan desainer.">
   <meta property="og:type" content="website">
   <meta property="og:url" content="/daffadevhosting/pricing">
-  <meta property="og:image" content="/assets/images/og-image.jpg"> <meta property="og:site_name" content="UI Transformer">
+  <meta property="og:image" content="/daffadevhosting/assets/images/og-image.png"> <meta property="og:site_name" content="UI Transformer">
 
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Pricing">
   <meta name="twitter:description" content="Konversi desain UI ke kode Tailwind CSS secara otomatis dengan AI. Solusi cepat untuk developer dan desainer.">
-  <meta name="twitter:image" content="/assets/images/og-image.jpg"> <meta name="twitter:creator" content="@namatwitteranda"> <link rel="canonical" href="/daffadevhosting/pricing">
+  <meta name="twitter:image" content="/daffadevhosting/assets/images/og-image.png"> <meta name="twitter:creator" content="@namatwitteranda"> <link rel="canonical" href="/daffadevhosting/pricing">
 
   <link rel="preload" href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" as="style">
   <link rel="preload" href="/daffadevhosting/assets/css/tailwind.css" as="style">
