deploy: fbffe5ce06767d3317f8dec248a8d1296a6b6660

--- a/bantuan.html
+++ b/bantuan.html
@@ -65,7 +65,7 @@ const firebaseConfig = {
         window.getAuth = () => auth;
         window.getFirestore = () => db;
 
-const MIDTRANS_WORKER_URL = "https://midtranspay.androidbutut.workers.dev/snap";
+const MIDTRANS_WORKER_URL = "SB-Mid-client-i2KW02MfN9duiyJ9";
 </script>
 
 </head>
