--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
   
-  <script src="https://app.sandbox.midtrans.com/snap/snap.js" data-client-key=""></script>
+  <script src="https://app.sandbox.midtrans.com/snap/snap.js" data-client-key="SB-Mid-client-i2KW02MfN9duiyJ9"></script>
   <script src="https://www.paypal.com/sdk/js?client-id=ATCHMUUU140DUFJVh2BhJ3MwEl-2YpsO1GcLx9jVt-nbLMyuLw0QIb5BxeV09py5QPG4rJ95HkX6fp7s&currency=USD"></script>
 <!-- Firebase SDKs from CDN -->
 <script src="https://www.gstatic.com/firebasejs/10.12.1/firebase-app-compat.js"></script>
@@ -65,7 +65,7 @@ const firebaseConfig = {
         window.getAuth = () => auth;
         window.getFirestore = () => db;
 
-const MIDTRANS_WORKER_URL = "SB-Mid-client-i2KW02MfN9duiyJ9";
+const MIDTRANS_WORKER_URL = "";
 </script>
 
 </head>
