deploy: 13b8c2eed0a1648e23e3346339eb536c5bcba272

--- a/bantuan.html
+++ b/bantuan.html
@@ -841,7 +841,7 @@ loginBtn.addEventListener('click', async () => {
     });
     modal.classList.add('hidden');
   } catch (error) {
-    alert('Login gagal: ' + error.message);
+    globalAlert('Login gagal: ' + error.message);
   }
 });
 </script>
