--- a/index.html
+++ b/index.html
@@ -1322,7 +1322,7 @@ loginBtn.addEventListener('click', async () => {
     });
     modal.classList.add('hidden');
   } catch (error) {
-    alert('Login gagal: ' + error.message);
+    globalAlert('Login gagal: ' + error.message);
   }
 });
 </script>
